# django-admin-display

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: release.yml  test.yml  workflow.yml
django_admin_display/: __init__.py
tests/: test_decorator.py  test_mypy.py
