[tool.poetry]
name = "django-admin-display"
version = "1.0.0"
description = "Simplifies the use of special attributes for the django admin."
authors = [
    "Alexander Frenzel <alex@relatedworks.com>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/escaped/django-admin-display/blob/master/README.rst"
homepage = "https://github.com/escaped/django-admin-display"
repository = "https://github.com/escaped/django-admin-display"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = ">=3.6"
# django = ">=1.11"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-isort = "^2.5"
flake8-mypy = "^17.8"
ipython = "^6.4"
pdbpp = "^0.9.2"
pytest = "^3.0"
pytest-coverage = "^0.0.0"
pytest-django = "^3.3"
pytest-flake8 = "^1.0"
pytest-mock = "^1.10"
tox = "^3.1"
